chapter03书中的代码示例-主要讲的是所有对象都通用的方法的实现方式和注意事项(equals,hashCode,toString,clone,Comparable)

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!--AutoValue依赖包-->
+        <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <version>1.5.1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
